added hover effect

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h1>Our Awesome Portfolio</h1>
                     <p>Dive into a world of style with our fashion store portfolio, where each piece is a statement and every collection tells a unique story. Elevate your wardrobe with a curated blend of trendsetting designs, ensuring your fashion journey is as extraordinary as you are.</p>
                 </div>
-                <div class="port-images">
+                <div>
                     <div class="row">
                         <div class="port-img"><img src="images/Rectangle 3.png" alt=""></div>
                         <div class="port-img"><img src="images/Rectangle 4.png" alt=""></div>
